# OpenCVDemo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  VideoPlayer.cpp  build.sh  cmake_install.cmake
OpenCvPythonDemo/: .gitignore  Test.py  face-train.py  face.py  record_video.py  res-change.py  trainner.yml
OpenCvPythonDemo/Tutorial/SimpleAPI/: lans.py
OpenCvPythonDemo/VlogHelper/: CreateVideo.py
